<resources>
    <string name="app_name">MyLogin</string>
    <string name="miperfil">Mi perfil</string>
    <string name="login">LOGIN</string>
    <string name="main">MAIN</string>
    <string name="logout_forget">logout forget</string>
    <string name="titulo">Mi formulario</string>
    <string name="nombre">Nombre</string>
    <string name="login2">Ingrese su Usuario</string>
    <string name="password">Password:</string>
    <string name="rpassword">rPassword:</string>
    <string name="pass2">Ingrese su password</string>
    <string name="pass3">Confirme su password</string>
    <string name="correo">Correo:</string>
    <string name="correo2">Ingrese su correo</string>
    <string name="guardar">Aceptar</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="pasatiempos">Pasa Tiempo</string>
    <string name="fechaNaci">Fecha de Nacimiento: </string>
    <string name="nadar">Nadar</string>
    <string name="bailar">Bailar</string>
    <string name="correr">Correr</string>
    <string name="cine">Cine</string>
    <string name="genero">Genero</string>
    <string name="principal">Principal</string>
    <string name="Cerrar">Cerrar Sesión</string>
    <string name="usuario">Usuario:</string>
    <string name="facebook_app_id">2132492610318157</string>
    <string name="fb_login_protocol_scheme">fb2132492610318157</string>
    <string name="recordar">recordar</string>
    <string name="aceptar">Aceptar</string>
    <string name="registro">Registro</string>
    <string name="ingrese_su_contrase_a">ingrese su contraseña</string>
    <string name="contrasegna">contraseña:</string>
    <string name="gonzalo_gmail_com">gonzalo@gmail.com</string>
    <string name="correo1">correo:</string>
    <string name="title_activity_productos">ProductosActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Productos">PRODUCTOS</string>
    <string name="qrReader">CODIGO qR</string>
    <string name="CodigoQr">Lector qrCode</string>
    <string name="Pedidos">mis Pedidos</string>
    <string name="Empezar">Comenzar</string>
    <string name="PRECIO">PRECIO</string>
    <string name="CANTIDAD">CANTIDAD</string>
    <string name="comprar">COMPRAR</string>
    <string name="Inventario">00</string>
    <string name="pause">pause</string>
    <string name="mostrar">mostrar</string>
     <string name="tt">Lo que buscamos con esta app, es
 que las pesonas que visitan los pueblos del suroeste antioqueño, puedan
 recibir una atención oportuna y ágil en los quioscos que se encuentran en
 los parques centrales de dichos pueblos.
 Para ello, cada persona podrá identificarse en el respectivo quiosco y
 gestionar su pedido desde la app.</string>

    <string name="CONFIRMAR">CONFIRMAR</string>
    <string name="CONFIRMARCOMPRA">CONFIRMAR COMPRA</string>
    <string name="NuestaApp">NuestraApp</string>


</resources>
