<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Space
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="9"
            android:orientation="horizontal"
            android:paddingTop="15dp">

            <TextView
                android:id="@+id/textlistCantidadCompra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/CANTIDAD"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textlistNombreCompra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/nombre"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textlistPrecio_uCompra"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_vertical|center_horizontal|center"
                android:text="@string/PRECIO"
                android:textSize="18sp"
                android:textStyle="bold" />

        </LinearLayout>

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

    </LinearLayout>



</android.support.constraint.ConstraintLayout>